--- a/src/main.css
+++ b/src/main.css
@@ -1,8 +1,8 @@
 /* Import Roboto font from Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
-/* Import Tailwind CSS */
-@import 'tailwindcss'; 
+/* Tailwind CSS */
+@import "tailwindcss"; 
 
 html, body, #root {
  overflow: hidden;
